# Face_Detection

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/io/weichao/face_detection/: ExampleInstrumentedTest.java
app/src/main/cpp/: DetectionBasedTracker_jni.cpp  DetectionBasedTracker_jni.h
app/src/main/java/org/opencv/samples/facedetect/: FdActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/io/weichao/face_detection/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary320/: build.gradle
